Interactor: fix z-index of buttons (#201)

--- a/apps/interactor/src/components/inner-thoughts/InnerThoughtsTrigger.scss
+++ b/apps/interactor/src/components/inner-thoughts/InnerThoughtsTrigger.scss
@@ -20,7 +20,7 @@
     opacity: 0;
     transition: opacity 0.2s ease;
     pointer-events: none;
-    z-index: 1;
+    z-index: 2;
     outline: none;
 
     &:focus {
