--- a/apps/interactor/src/components/interactor/SceneSuggestion.scss
+++ b/apps/interactor/src/components/interactor/SceneSuggestion.scss
@@ -5,7 +5,7 @@
   position: absolute;
   left: 0;
   top: 100px;
-  z-index: 1;
+  z-index: 2;
 
   &__button {
     transition: all 0.2s ease-out;
